# rust-practice

.github/workflows/: linter.yaml
advent-of-code/: Cargo.toml  ~
advent-of-code-2024/: Cargo.toml
advent-of-code-2024/data/puzzle13/: input.txt  text.txt
advent-of-code-2024/data/puzzle16/: easy3.txt
advent-of-code-2024/data/puzzle6/: test.txt
advent-of-code/src/: main.rs
advent_of_code_2022/: Cargo.toml
advent_of_code_2022/problem_txt/: puzzle13.txt  puzzle14.txt  puzzle15.txt  puzzle16.txt
advent_of_code_2022/src/: common.rs  lib.rs  main.rs  puzzle_solver.rs  puzzles.rs
advent_of_code_2023/: Cargo.toml
advent_of_code_2023/data/: hard.txt
advent_of_code_2024/: Cargo.toml
advent_of_code_2024/benches/: my_benchmark.rs  puzzle_1.rs
advent_of_code_2024/data/puzzle24/: input.csv
advent_of_code_2024/data/puzzle25/: input.txt
advent_of_code_2024/data/puzzle9/: test4.txt
advent_of_code_2024/src/: common.rs  lib.rs  main.rs  puzzles.rs
advent_of_code_2024/src/puzzles/: lib.rs  puzzle1.rs  puzzle10.rs  puzzle11.rs  puzzle12.rs  puzzle13.rs  puzzle14.rs  puzzle15.rs  puzzle16.rs  puzzle17.rs  puzzle18.rs  puzzle19.rs  puzzle2.rs  puzzle20.rs  puzzle21.rs  puzzle22.rs  puzzle22_experiment.rs  puzzle23.rs  puzzle24.rs  puzzle25.rs  puzzle3.rs  puzzle4.rs  puzzle5.rs  puzzle6.rs  puzzle7.rs  puzzle8.rs  puzzle9.rs
control-flow/src/: main.rs
fibonacci/src/: main.rs
functions/src/: main.rs
guessing_game/src/: main.rs
ownership/src/: main.rs
projects/hello_world/: main
slice/src/: main.rs
variables/src/: main.rs
(+30 files in other folders)
