[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-heap-plus = "0.5.0"
dict = "0.1.5"
eqsolver = "0.1.2"
itertools = "0.12.0"
levenberg-marquardt = "0.13.1"
memoize = "0.4.1"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
regex = "1.10.2"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"
